# KAI_schedule

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kai_schedule/: __init__.py  getter.py  main.py  parser.py  schedule_item.py
